[metadata]
name = LaoODetection
author = Oui Sinthala
version = 0.1.0
description = Lao object detection package
readme = README.md
license = LICENSE
url = https://github.com/OuiSinthala/LaoODetection
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    cvzone==1.5.6
    ultralytics==8.0.26
    hydra-core>=1.2.0
    matplotlib>=3.2.2
    numpy>=1.18.5
    lap==0.4.0
    opencv-contrib-python==4.5.5.62
    Pillow>=7.1.2
    PyYAML>=5.3.1
    requests>=2.23.0
    scipy>=1.4.1
    torch>=1.7.0
    torchvision>=0.8.1
    tqdm>=4.64.0
    filterpy==1.4.5
    scikit-image==0.19.3

[options.packages.find]
where = src

[options.package_data]
LaoODetection = yolo_V8_Models/*
